@@ -3,10 +3,10 @@ package com.bonepl.razersdk.animation;
 import com.bonepl.razersdk.sdk.RzKey;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Map;
 import java.util.NoSuchElementException;
 
+import static com.bonepl.razersdk.sdk.RzKey.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 class LayeredFrameTest {
@@ -37,9 +37,9 @@ class LayeredFrameTest {
     @Test
     void testLayerCreation() {
         //given
-        final SimpleFrame layerOne = new SimpleFrame(Arrays.asList(RzKey.RZKEY_1, RzKey.RZKEY_2, RzKey.RZKEY_3), Color.BLUE);
-        final SimpleFrame layerTwo = new SimpleFrame(RzKey.RZKEY_2, Color.RED);
-        final SimpleFrame transparentLayer = new SimpleFrame(Arrays.asList(RzKey.RZKEY_1, RzKey.RZKEY_2, RzKey.RZKEY_3, RzKey.RZKEY_4), Color.NONE);
+        final SimpleFrame layerOne = new SimpleFrame(List.of(RZKEY_1, RZKEY_2, RZKEY_3), Color.BLUE);
+        final SimpleFrame layerTwo = new SimpleFrame(RZKEY_2, Color.RED);
+        final SimpleFrame transparentLayer = new SimpleFrame(List.of(RZKEY_1, RZKEY_2, RZKEY_3, RZKEY_4), Color.NONE);
 
         //when
         final LayeredFrame layeredFrame = new LayeredFrame();
@@ -49,9 +49,9 @@ class LayeredFrameTest {
         final Map<RzKey, Color> actualColorMap = layeredFrame.getFrame().getKeysToColors();
 
         //then
-        assertEquals(actualColorMap.get(RzKey.RZKEY_1), Color.BLUE);
-        assertEquals(actualColorMap.get(RzKey.RZKEY_3), Color.BLUE);
-        assertEquals(actualColorMap.get(RzKey.RZKEY_2), Color.RED);
+        assertEquals(actualColorMap.get(RZKEY_1), Color.BLUE);
+        assertEquals(actualColorMap.get(RZKEY_3), Color.BLUE);
+        assertEquals(actualColorMap.get(RZKEY_2), Color.RED);
         assertEquals(3, actualColorMap.size());
         assertFalse(layeredFrame.hasFrame());
         assertThrows(NoSuchElementException.class, layeredFrame::getFrame);
